# Backend-Infrastructure-Foundations

./: .gitignore  README.md  README_folder_template.md  main.py  pyproject.toml
python_typing/: README_py_typing.md
python_typing/scripts/add_demo/: add_demo.py  error_handle_add_test.py
python_typing/scripts/math_utils_demo/: math_utils_demo.py
python_typing/scripts/type_dict_vs_dataclass/: dataclass.py  type_dict.py
