[project]
name = "backend-infrastructure-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.11",
    "types-psycopg2>=2.9.21.20250809",
    "types-requests>=2.32.4.20250809",
]

